--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             initial-scale=1,
             maximum-scale=3">
     <title>Git Desarrollo Colaborativo</title>
+    <!-- Styles CSS -->
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <header>
