Revision: Cierre de Lista

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <li><strong>git log </strong> muestra el historial de cambios ordenados de manera descendente</li>
                 <li><strong>git blame &lt;file></strong> muestra los autores y confirmaciones de cada linea en un archivo.</li>
                 <li><strong>git push &lt;remote> &lt;branch></strong> agrega los cambios de la rama al repositorio remoto</li>
-                <li><strong>git fetch &lt;remote> </strong> captura el historial de cambios del repositorio remoto/li>
+                <li><strong>git fetch &lt;remote> </strong> captura el historial de cambios del repositorio remoto </li>
             </ul>
         </article>
     </section>
