--- a/index.html
+++ b/index.html
@@ -67,5 +67,14 @@
             </ul>
         </article>
     </section>
+    <section>
+        <h2>Apuntadores de GIT</h2>
+        <article>
+            <h3>HEAD</h3>
+            <p>
+                Apuntador movil que indica al usuario en que punto del historial se encuentra, normalmente suele apuntar a la ultima confirmacion, pero podemos utilizarlo para desplazarnos dentro del historial. Se utiliza como referente para otros comandos como checkout o diff. si escribimos <em>HEAD~2</em> o <em>HEAD^^</em> estamos referenciando al commit que se encuentra 2 confirmaciones atras.
+            </p>
+        </article>
+    </section>
 </body>
 </html>
