Logica: Menu Hamburguesa

--- a/index.html
+++ b/index.html
@@ -76,5 +76,7 @@
             </ul>
         </article>
     </section>
+    <!-- Scripts JS -->
+    <script src="scripts/main.js"></script>
 </body>
 </html>
