--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
                 Apuntador movil que indica al usuario en que punto del historial se encuentra, normalmente suele apuntar a la ultima confirmacion, pero podemos utilizarlo para desplazarnos dentro del historial. Se utiliza como referente para otros comandos como checkout o diff. si escribimos <em>HEAD~2</em> o <em>HEAD^^</em> estamos referenciando al commit que se encuentra 2 confirmaciones atras.
             </p>
         </article>
+        <article>
+            <h3>BRANCH</h3>
+            <p>
+                Apuntador dinamico que siempre se corresponde con el ultimo commit de la historia, se utiliza para facilitar la navegacion dentro del historial de confirmaciones y tambien para probar caracteristicas, corregir errores o realizar revisiones sin necesidad de afectar la historia principal.
+            </p>
+        </article>
     </section>
 </body>
 </html>
