--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
                     <td>Cristian Racedo</td>
                     <td>cristiandracedo@hotmail.com</td>
                 </tr>
+                <tr>
+                    <td>Linus Torvalds</td>
+                    <td>tux</td>
+                    <td>l.torvalds@linux.com</td>
+                </tr>
                 <!-- Ingrese sus datos -->
             </tbody>
         </table>
