Colaborador: Bill Gates

--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
                     <td>Ramiro Ledesma</td>
                     <td>ledesma.ramiro@gmail.com</td>
                 </tr>
+                <tr>
+                    <td>Bill Gates</td>
+                    <td>Windows</td>
+                    <td>b.gates@microsoft.com</td>
+                </tr>
                 <!-- Ingrese sus datos -->
             </tbody>
         </table>
