--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
                     <td>Cristian Racedo</td>
                     <td>cristiandracedo@hotmail.com</td>
                 </tr>
+                <tr>
+                    <td>Bill Gates</td>
+                    <td>Windows</td>
+                    <td>b.gates@microsoft.com</td>
+                </tr>
                 <!-- Ingrese sus datos -->
             </tbody>
         </table>
