Colaborador: Lautaro Argañaras

--- a/index.html
+++ b/index.html
@@ -200,6 +200,11 @@
           <td>Damian Barrios</td>
           <td>barrios.d122@gmail.com</td>
         </tr>
+        <tr>
+          <td>coloamg</td>
+          <td>Lautaro Arganaras</td>
+          <td>lauarganaras@gmail.com</td>
+        </tr>
         <!-- Ingrese sus datos -->
       </tbody>
     </table>
