--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#">Link 3</a></li>
         </ul>
     </nav>
-    <header>
+    <header id="header">
         <h1>GIT</h1>
         <p>Desarrollo Colaborativo</p>
     </header>
