--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#contacto" title="Contacto">contacto</a></li>
         </ul>
     </nav>
-    <header>
+    <header id="header">
         <h1>GIT</h1>
         <p>Desarrollo Colaborativo</p>
     </header>
