Apuntadores GIT: STASH

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta
-  name="viewport"
-  content="
-  width=device-width,
-  initial-scale=1,
-  maximum-scale=3"
-  />
-  <title>Git Desarrollo Colaborativo</title>
-  <!-- Styles CSS -->
-  <link rel="stylesheet" href="styles/main.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+    name="viewport"
+    content="
+    width=device-width,
+    initial-scale=1,
+    maximum-scale=3"
+    />
+    <title>Git Desarrollo Colaborativo</title>
+    <!-- Styles CSS -->
+    <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
     <nav>
@@ -93,6 +93,12 @@
                 Apuntador dinamico que siempre se corresponde con el ultimo commit de la historia, se utiliza para facilitar la navegacion dentro del historial de confirmaciones y tambien para probar caracteristicas, corregir errores o realizar revisiones sin necesidad de afectar la historia principal.
             </p>
         </article>
+        <article>
+            <h3>STASH</h3>
+            <p>
+                Apuntador de la zona temporal de cambios, se utiliza cuando necesitamos realizar cualquier accion que requiera que git haga cambios en nuestro proyecto. Lo que hace es generar una referencia temporal que integra los cambios almacenados en el INDEX y cuando lo reaplicamos realiza una operacion merge a la inversa.
+            </p>
+        </article>
     </section>
     <footer>
         <table class="colabs">
@@ -119,17 +125,16 @@
                     <td>BarriosD122</td>
                     <td>Damian Barrios</td>
                     <td>barrios.d122@gmail.com</td>
-              </tr>
-              <tr>
-                <td>coloamg</td>
-                <td>Lautaro Arganaras</td>
-                <td>lauarganaras@gmail.com</td>
-              </tr>
+                </tr>
+                <tr>
+                    <td>coloamg</td>
+                    <td>Lautaro Arganaras</td>
+                    <td>lauarganaras@gmail.com</td>
+                </tr>
                 <!-- Ingrese sus datos -->
             </tbody>
         </table>
     </footer>
-  
     <!-- Scripts JS -->
     <script src="scripts/main.js"></script>
 </body>
