Apuntadores GIT: TAG

--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
                 Apuntador de la zona temporal de cambios, se utiliza cuando necesitamos realizar cualquier accion que requiera que git haga cambios en nuestro proyecto. Lo que hace es generar una referencia temporal que integra los cambios almacenados en el INDEX y cuando lo reaplicamos realiza una operacion merge a la inversa.
             </p>
         </article>
+        <article>
+            <h3>TAG</h3>
+            <p>
+                Apuntador estatico que hace referencia al commit donde se haya aplicado, se utiliza para el versionado de nuestro proyecto y tambien facilita la navegacion dentro del historial, debido a que asociamos un nombre a una referencia. Por lo general el formato de las etiquetas suele ser <em>v.n.n.n</em> indicando version principal, subversion y revisiones o correcciones.
+            </p>
+        </article>
     </section>
     <footer>
         <table class="colabs">
