--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@
                     <td>tux</td>
                     <td>l.torvalds@linux.com</td>
                 </tr>
+                <tr>
+                    <td>Ramiro Prueba 2</td>
+                    <td>Ramiro Ledesma</td>
+                    <td>ledesma.ramiro@gmail.com</td>
+                </tr>
                 <!-- Ingrese sus datos -->
             </tbody>
         </table>
