--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
             </ul>
         </article>
     </section>
+    <footer id="footer">
+        <div class="social">
+            <a href="https://github.com/c215714n/git-j10" target="_blank">GitHub</a>
+            <a href="https://gitlab.com/c215714n/git-j10" target="_blank">GitLab</a>
+            <a href="https://Bitbucket.org/c215714n/git-j10" target="_blank">BitBucket</a>
+        </div>
+    </footer>
     <!-- Scripts JS -->
     <script src="scripts/main.js"></script>
 </body>
