--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
             </p>
         </article>
     </section>
-    <footer>
+    <footer id="footer">
+        <div class="social">
+            <a href="https://github.com/c215714n/git-j10" target="_blank">GitHub</a>
+            <a href="https://gitlab.com/c215714n/git-j10" target="_blank">GitLab</a>
+            <a href="https://Bitbucket.org/c215714n/git-j10" target="_blank">BitBucket</a>
+        </div>
         <table class="colabs">
             <caption>Colaboradores</caption>
             <thead>
